# sayknowmind

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  Makefile  README.md  SayknowMind (PRD)  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  mobile-release.yml
.omc/: prd.json
Planning DEV/: FRONTEND_IMPLEMENTATION.md  design.md  requirements.md  tasks.md
apps/ai-server/: Dockerfile  package-lock.json
apps/dashboard/: package.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: capacitor.config.json  package.json
apps/web/: .dockerignore  Dockerfile  desktop-init.sql  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
db/init/: 04-sayknowmind-init.sql  05-ingestion-jobs.sql  06-privacy-levels.sql  07-better-auth.sql  08-relay-sync.sql  09-sync-ledger.sql
db/migrations/: 001-shared-content-add-columns.sql  003-channel-links.sql  026_add_bot_token_to_channel_links.sql  027_add_lang_to_channel_links.sql  027_conversations_simple.sql  027_document_relations.sql  028_channel_links.sql  (+15 more)
docs/: recommendation-cn.md  work-log-2026-03-26.md
sayknow-ai-server/: .env.example  .gitignore  QUICK_START.md  README.md  docker-compose.yml  package.json  railway.json  tsconfig.json
scripts/: register-migrations.sh  start-all.sh  stop-all.sh  telegram-poll.sh
(+348 files in other folders)
